# shizuka-rs

./: Cargo.toml
.github/workflows/: rust-ci.yml
src/: lib.rs  main.rs  model.rs  source.rs  sources.rs
src/model/: episode.rs  media.rs  media_kind.rs  season.rs  subtitle.rs  video.rs
src/sources/: cinemana.rs
src/sources/cinemana/: model.rs
src/sources/cinemana/model/: episode.rs  media.rs  media_kind.rs  subtitle.rs  video.rs
